--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <title></title>
-    </body>
+<html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <title>
+        To Do Page
+     </title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="./css/style.css">
+     <link rel="stylesheet" href="./css/style.css">
+ </head>
+ <body>
+    <h1>Todo list </h1>
+
+    <input id="taskinput" type="text" placeholder="Type a new task">
+    <button id="taskbutton">Add Task</button>
+    <ul id="tasklist"></ul>
+
+    <script src="main.js"></script>
+ </body>
 </html>
